# ai-assignment

./: main.py  pyproject.toml
